--- a/new-client/package.json
+++ b/new-client/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.0.5"
   }
 }
