--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "automerge": "^0.14.1",
     "express": "^4.17.1",
     "node-cache": "^5.1.2",
+    "socket.io": "^3.0.5",
     "ws": "^7.4.2"
   },
   "devDependencies": {
