--- a/client/package.json
+++ b/client/package.json
@@ -3,22 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "socket.io": "^3.0.5",
-    "socket.io-client": "^3.0.5",
     "@monaco-editor/react": "^3.8.3",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "bootstrap": "^4.5.3",
+    "antd": "^4.10.2",
     "jquery": "^3.5.1",
     "monaco-editor": "^0.21.2",
     "popper": "^1.0.1",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
