--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,15 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "ace-builds": "^1.4.12",
     "antd": "^4.10.2",
-    "jquery": "^3.5.1",
-    "monaco-editor": "^0.21.2",
     "popper": "^1.0.1",
     "prop-types": "^15.7.2",
     "rc-queue-anim": "^1.8.5",
     "rc-scroll-anim": "^2.7.6",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.1",
+    "react-ace": "^9.2.1",
     "react-dom": "^17.0.1",
     "react-intl": "^5.10.16",
     "react-particles-js": "^3.4.1",
