--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --config ../.prettierrc.json --write 'src/**/*.{js,jsx,ts,tsx,json,md,css}'"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   },
   "eslintConfig": {
     "extends": [
