--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/tsc && node ./dist/server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --config ../.prettierrc.json --write 'src/**/*.{js,jsx,ts,tsx,json,md,css}'"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/ws": "^7.4.0",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   }
 }
